--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -63,7 +63,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Vehicle Car = new Vehicle();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -89,7 +96,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Animal Dog = new Animal();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,7 +161,28 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get {return color;}\n",
+    "        set {color = value;}\n",
+    "    }\n",
+    "\n",
+    "    public void StartEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Запустить двигатель...\");\n",
+    "    }   \n",
+    "}\n",
+    "\n",
+    "Vehicle Car = new Vehicle();\n",
+    "Car.Color = \"Красный\";\n",
+    "Car.StartEngine();\n",
+    "Console.WriteLine(Car.Color);\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +207,28 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get {return color;}\n",
+    "        set {color = value;}\n",
+    "    }\n",
+    "\n",
+    "    public void GiveACommand()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Дать команду\")\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal Dog = new Animal();\n",
+    "Dog.Color = \"Черный\";\n",
+    "Dog.GiveACommand();\n",
+    "Console.WriteLine(Dog.Color);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +295,38 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "myCar.Color = \"Красный\";\n",
+    "Console.WriteLine(myCar.Color);\n",
+    "myCar.Move();\n",
+    "\n",
+    "myVehicle.Color = \"Синий\";\n",
+    "Console.WriteLine(myVehicle.Color);\n",
+    "myVehicle.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +351,38 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Пошли...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal();\n",
+    "Dog myDog = new Dog();\n",
+    "\n",
+    "myDog.Color = \"Черный\";\n",
+    "Console.WriteLine(myDog.Color);\n",
+    "myDog.Move();\n",
+    "\n",
+    "myAnimal.Color = \"Белый\";\n",
+    "Console.WriteLine(myAnimal.Color);\n",
+    "myAnimal.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,7 +441,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспорт двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "\n",
+    "myVehicle.Move();\n",
+    "myCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -348,7 +489,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal();\n",
+    "Dog myDog = new Dog();\n",
+    "\n",
+    "\n",
+    "myAnimal.Move();\n",
+    "myDog.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -407,7 +571,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "abstract class Car\n",
+    "{\n",
+    "    public abstract void ChargeBattery();\n",
+    "\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class ElectricCar : Car\n",
+    "{\n",
+    "    public override void ChargeBattery()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Батарея заряжена...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ElectricCar myElectricCar = new ElectricCar(); // Создание объекта myElectricCar\n",
+    "\n",
+    "myElectricCar.ChargeBattery();\n",
+    "myElectricCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,7 +619,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "abstract class Dog\n",
+    "{\n",
+    "    public abstract void Feed();\n",
+    "\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Пошли...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class MyDog : Dog\n",
+    "{\n",
+    "    public override void Feed()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака накормлена...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "MyDog myDog = new MyDog();\n",
+    "\n",
+    "myDog.Feed();\n",
+    "myDog.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -506,7 +716,39 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Engine\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Двигатель стартовал\");\n",
+    "    public void Stop() => Console.WriteLine(\"Двигатель остановлен\");\n",
+    "}\n",
+    "\n",
+    "public class Car\n",
+    "{\n",
+    "    private Engine engine;\n",
+    "\n",
+    "    public Car(Engine engine)\n",
+    "    {\n",
+    "        this.engine = engine;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive()\n",
+    "    {\n",
+    "        engine.Start();\n",
+    "\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "\n",
+    "        engine.Stop();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Engine myEngine = new Engine();\n",
+    "Car myAuto = new Car(myEngine);\n",
+    "\n",
+    "myAuto.Drive();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -531,7 +773,39 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Paw\n",
+    "{\n",
+    "    public void Up() => Console.WriteLine(\"Лапа поднята\");\n",
+    "    public void Down() => Console.WriteLine(\"Лапа опущена\");\n",
+    "}\n",
+    "\n",
+    "public class Dog\n",
+    "{\n",
+    "    private Paw paw;\n",
+    "\n",
+    "    public Dog(Paw paw)\n",
+    "    {\n",
+    "        this.paw = paw;\n",
+    "    }\n",
+    "\n",
+    "    public void GiveACommand()\n",
+    "    {\n",
+    "        paw.Up();\n",
+    "\n",
+    "        Console.WriteLine(\"Команда исполняется\");\n",
+    "\n",
+    "        paw.Down();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Paw myPaw = new Paw();\n",
+    "Dog myDog = new Dog(myPaw);\n",
+    "\n",
+    "myDog.GiveACommand();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -644,7 +918,51 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Vehicle\n",
+    "{\n",
+    "    public abstract void Drive();\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    private Driver driver;\n",
+    "\n",
+    "    public Car(Driver driver)\n",
+    "    {\n",
+    "        this.driver = driver;\n",
+    "    }\n",
+    "\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль движется...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Driver\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Driver(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(Vehicle vehicle)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} управляет траспортом...\");\n",
+    "        vehicle.Drive();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Driver Danil = new Driver(\"Данил\");\n",
+    "    Car myCar = new Car(Danil);\n",
+    "\n",
+    "    myCar.Drive();\n",
+    "    Danil.Drive(myCar);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -669,7 +987,51 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Animal\n",
+    "{\n",
+    "    public abstract void Move();\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    private Owner owner;\n",
+    "\n",
+    "    public Dog(Owner owner)\n",
+    "    {\n",
+    "        this.owner = owner;\n",
+    "    }\n",
+    "\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака движется...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Owner\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Owner(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Move(Animal animal)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} владелец животного...\");\n",
+    "        animal.Move();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Owner Danil = new Owner(\"Данил\");\n",
+    "    Dog myDog = new Dog(Danil);\n",
+    "\n",
+    "    myDog.Move();\n",
+    "    Danil.Move(myDog);"
+   ]
   }
  ],
  "metadata": {
