--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -210,7 +210,60 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public interface IVehicleBehavior\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "}\n",
+    "\n",
+    "public class Vehicle : IVehicleBehavior\n",
+    "{\n",
+    "    public string Make;\n",
+    "    public string Model;\n",
+    "    public int Year;\n",
+    "    private static int totalVehicles;\n",
+    "\n",
+    "    public Vehicle(string make, string model, int year)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "        Year = year;\n",
+    "        totalVehicles++;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"The vehicle is starting.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"The vehicle is stopping.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int NumberOfDoors;\n",
+    "\n",
+    "    public Car(string make, string model, int year, int numberOfDoors)\n",
+    "        : base(make, model, year)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"The car is starting with a roar!\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"The car is stopping gracefully.\");\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,7 +288,57 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public interface IAnimalBehavior\n",
+    "{\n",
+    "    void Speak();\n",
+    "    void Eat();\n",
+    "}\n",
+    "\n",
+    "public class Animal : IAnimalBehavior\n",
+    "{\n",
+    "    public string Name;\n",
+    "    public int Age;\n",
+    "    private static int totalAnimals;\n",
+    "\n",
+    "    public Animal(string name, int age)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Age = age;\n",
+    "        totalAnimals++;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Speak()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Animal makes a sound\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} is eating.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed;\n",
+    "\n",
+    "    public Dog(string name, int age, string breed) : base(name, age)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void Speak()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Woof! Woof!\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Eat()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} the dog is eating dog food.\");\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
