--- a/Sprint1/Task1.ipynb
+++ b/Sprint1/Task1.ipynb
@@ -137,7 +137,69 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    private string _color;\n",
+    "    private int _speed;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return _color; }\n",
+    "        set { _color = value; }\n",
+    "    }\n",
+    "\n",
+    "    public int Speed\n",
+    "    {\n",
+    "        get { return _speed; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _speed = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Скорость не может быть отрицательной!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static int TotalVehicles { get; private set; } = 0;\n",
+    "\n",
+    "    public Vehicle()\n",
+    "    {\n",
+    "        TotalVehicles++;\n",
+    "    }\n",
+    "\n",
+    "    public void Accelerate(int delta)\n",
+    "    {\n",
+    "        Speed += delta;\n",
+    "    }\n",
+    "\n",
+    "    public static void DisplayTotalVehicles()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество транспортных средств: {TotalVehicles}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    private int _fuelLevel;\n",
+    "\n",
+    "    public int FuelLevel\n",
+    "    {\n",
+    "        get { return _fuelLevel; }\n",
+    "        set { _fuelLevel = value; }\n",
+    "    }\n",
+    "\n",
+    "    public Car() : base()\n",
+    "    {\n",
+    "        FuelLevel = 100;\n",
+    "    }\n",
+    "\n",
+    "    public void Refuel(int amount)\n",
+    "    {\n",
+    "        FuelLevel += amount;\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +224,72 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private static int animalCount = 0;\n",
+    "    private string _name;\n",
+    "\n",
+    "    public Animal(string name)\n",
+    "    {\n",
+    "        _name = name;\n",
+    "        animalCount++;\n",
+    "    }\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set { _name = value; }\n",
+    "    }\n",
+    "\n",
+    "    public static void DisplayTotalAnimals()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество животных: {animalCount}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    private int _dogsage;\n",
+    "\n",
+    "    public int DogsAge\n",
+    "    {\n",
+    "        get {return _dogsage; }\n",
+    "        set {_dogsage = value; }\n",
+    "    }\n",
+    "\n",
+    "    public Dog(string name) : base(name)\n",
+    "    {\n",
+    "        DogsAge = 5;\n",
+    "    }\n",
+    "\n",
+    "    public void AgeUp(int num)\n",
+    "    {\n",
+    "        DogsAge += num;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    private int _catsage;\n",
+    "\n",
+    "    public int CatsAge\n",
+    "    {\n",
+    "        get {return _catsage; }\n",
+    "        set {_catsage = value; }\n",
+    "    }\n",
+    "\n",
+    "    public Cat(string name) : base(name)\n",
+    "    {\n",
+    "        CatsAge = 5;\n",
+    "    }\n",
+    "\n",
+    "    public void AgeUp(int num)\n",
+    "    {\n",
+    "        CatsAge += num;\n",
+    "    }\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
