--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -111,7 +111,36 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "    protected int speed;\n",
+    "\n",
+    "    protected void SetSpeed(int value)\n",
+    "    {\n",
+    "        speed = value;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    private int fuelLevel;\n",
+    "\n",
+    "    public void Refuel(int amount)\n",
+    "    {\n",
+    "        fuelLevel += amount;\n",
+    "    }\n",
+    "\n",
+    "    protected void CheckSpeedLimit()\n",
+    "    {\n",
+    "        if (speed > 120)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Превышен скоростной режим!\");\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +165,73 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private static int animalCount = 0;\n",
+    "\n",
+    "    private string _name;\n",
+    "\n",
+    "    public Animal(string name)\n",
+    "    {\n",
+    "        _name = name;\n",
+    "        animalCount++;\n",
+    "    }\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set { _name = value; }\n",
+    "    }\n",
+    "\n",
+    "    public static int GetAnimalCount()\n",
+    "    {\n",
+    "        return animalCount;\n",
+    "    }\n",
+    "\n",
+    "    public virtual string Speak()\n",
+    "    {\n",
+    "        return \"Это животное издает звук.\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public Dog(string name) : base(name)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override string Speak()\n",
+    "    {\n",
+    "        return \"Гав!\";\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public Cat(string name) : base(name)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override string Speak()\n",
+    "    {\n",
+    "        return \"Мяу!\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Program\n",
+    "{\n",
+    "    public static void Main(string[] args)\n",
+    "    {\n",
+    "        Dog dog = new Dog(\"Шарик\");\n",
+    "        Cat cat = new Cat(\"Мурка\");\n",
+    "\n",
+    "        Console.WriteLine($\"{dog.Name} говорит: {dog.Speak()}\");\n",
+    "        Console.WriteLine($\"{cat.Name} говорит: {cat.Speak()}\");\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
