--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -220,13 +220,13 @@
     "    }\n",
     "}\n",
     "\n",
-    "public class Program\n",
+    "public class Zoo\n",
     "{\n",
-    "    public static void Main(string[] args)\n",
-    "    {\n",
-    "        Dog dog = new Dog(\"Шарик\");\n",
-    "        Cat cat = new Cat(\"Мурка\");\n",
+    "    private Dog dog = new Dog(\"Шарик\");\n",
+    "    private Cat cat = new Cat(\"Мурка\");\n",
     "\n",
+    "    public void AnimalSpeak(Dog dog, Cat cat)\n",
+    "    {\n",
     "        Console.WriteLine($\"{dog.Name} говорит: {dog.Speak()}\");\n",
     "        Console.WriteLine($\"{cat.Name} говорит: {cat.Speak()}\");\n",
     "    }\n",
