--- a/Sprint2/Task0.ipynb
+++ b/Sprint2/Task0.ipynb
@@ -140,8 +140,75 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Производитель: Toyota, Модель: Corolla\n",
+      "Двери: 4\n",
+      "Производитель: Honda, Модель: CBR600RR\n",
+      "Вид двигателя: Inline Four\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "\n",
+    "    public string Model { get; set; }\n",
+    "\n",
+    "    public Vehicle(string make, string model)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Производитель: {Make}, Модель: {Model}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int Doors { get; set; }\n",
+    "\n",
+    "    public Car(string make, string model, int doors) : base(make, model)\n",
+    "    {\n",
+    "        Doors = doors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Двери: {Doors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public string EngineType { get; set; }\n",
+    "\n",
+    "    public Motorcycle(string make, string model, string engineType) : base(make, model)\n",
+    "    {\n",
+    "        EngineType = engineType;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Вид двигателя: {EngineType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car myCar = new Car(\"Toyota\", \"Corolla\", 4);\n",
+    "myCar.DisplayInfo();\n",
+    "\n",
+    "Motorcycle myMotorcycle = new Motorcycle(\"Honda\", \"CBR600RR\", \"Inline Four\");\n",
+    "myMotorcycle.DisplayInfo();\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,8 +232,82 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вид: Овчарка, Пол: Женский\n",
+      "Вид: Сфинкс, Пол: Мужской\n",
+      "Вид: Воробей, Пол: Мужской\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Type { get; set; }\n",
+    "\n",
+    "    public string Gender { get; set; }\n",
+    "\n",
+    "    public Animal(string type, string gender)\n",
+    "    {\n",
+    "        Type = type;\n",
+    "        Gender = gender;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вид: {Type}, Пол: {Gender}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "\n",
+    "    public Dog(string type, string gender) : base(type, gender)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public Cat(string type, string gender) : base(type, gender)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public Bird(string type, string gender) : base(type, gender)\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog myDog = new Dog(\"Овчарка\", \"Женский\");\n",
+    "myDog.DisplayInfo();\n",
+    "\n",
+    "Cat myCat = new Cat(\"Сфинкс\", \"Мужской\");\n",
+    "myCat.DisplayInfo();\n",
+    "\n",
+    "Bird myBird = new Bird(\"Воробей\", \"Мужской\");\n",
+    "myBird.DisplayInfo();\n"
+   ]
   }
  ],
  "metadata": {
