--- a/Sprint2/Task0.ipynb
+++ b/Sprint2/Task0.ipynb
@@ -140,18 +140,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Производитель: Toyota, Модель: Corolla\n",
-      "Двери: 4\n",
-      "Производитель: Honda, Модель: CBR600RR\n",
-      "Вид двигателя: Inline Four\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "public class Vehicle\n",
     "{\n",
@@ -238,8 +227,11 @@
      "output_type": "stream",
      "text": [
       "Вид: Овчарка, Пол: Женский\n",
+      "Для охоты: True\n",
       "Вид: Сфинкс, Пол: Мужской\n",
-      "Вид: Воробей, Пол: Мужской\n"
+      "Хищник: False\n",
+      "Вид: Воробей, Пол: Мужской\n",
+      "Водоплавающее: False\n"
      ]
     }
    ],
@@ -264,48 +256,57 @@
     "\n",
     "public class Dog : Animal\n",
     "{\n",
+    "    public bool Hunting { get; set; }\n",
     "\n",
-    "    public Dog(string type, string gender) : base(type, gender)\n",
+    "    public Dog(string type, string gender, bool hunting) : base(type, gender)\n",
     "    {\n",
+    "        Hunting = hunting;\n",
     "    }\n",
     "\n",
     "    public override void DisplayInfo()\n",
     "    {\n",
     "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Для охоты: {Hunting}\");\n",
     "    }\n",
     "}\n",
     "\n",
     "public class Cat : Animal\n",
     "{\n",
-    "    public Cat(string type, string gender) : base(type, gender)\n",
+    "    public bool Predator { get; set; }\n",
+    "    public Cat(string type, string gender, bool predator) : base(type, gender)\n",
     "    {\n",
+    "        Predator = predator;\n",
     "    }\n",
     "\n",
     "    public override void DisplayInfo()\n",
     "    {\n",
     "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Хищник: {Predator}\");\n",
     "    }\n",
     "}\n",
     "\n",
     "public class Bird : Animal\n",
     "{\n",
-    "    public Bird(string type, string gender) : base(type, gender)\n",
+    "    public bool Waterfowl { get; set; }\n",
+    "    public Bird(string type, string gender, bool waterfowl) : base(type, gender)\n",
     "    {\n",
+    "        Waterfowl = waterfowl;\n",
     "    }\n",
     "\n",
     "    public override void DisplayInfo()\n",
     "    {\n",
     "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Водоплавающее: {Waterfowl}\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "Dog myDog = new Dog(\"Овчарка\", \"Женский\");\n",
+    "Dog myDog = new Dog(\"Овчарка\", \"Женский\", true);\n",
     "myDog.DisplayInfo();\n",
     "\n",
-    "Cat myCat = new Cat(\"Сфинкс\", \"Мужской\");\n",
+    "Cat myCat = new Cat(\"Сфинкс\", \"Мужской\", false);\n",
     "myCat.DisplayInfo();\n",
     "\n",
-    "Bird myBird = new Bird(\"Воробей\", \"Мужской\");\n",
+    "Bird myBird = new Bird(\"Воробей\", \"Мужской\", false);\n",
     "myBird.DisplayInfo();\n"
    ]
   }
